--- a/style_example/style.playground/Documentation/section-6.html
+++ b/style_example/style.playground/Documentation/section-6.html
@@ -13,7 +13,11 @@
   <section class="section">
     <p>Bacon ipsum dolor amet tongue porchetta picanha, cupim biltong meatball salami alcatra ball tip. Pork chop turkey tail beef ribs, kielbasa shoulder leberkas rump spare ribs pork belly pork loin short ribs salami ham tongue.</p>
 <p>Shank filet mignon pork loin pastrami jowl short ribs, prosciutto kevin ball tip porchetta frankfurter picanha pancetta pork chop. Short ribs hamburger doner swine, cupim shankle rump short loin cow pastrami biltong venison shoulder turkey.</p>
-
+<div class="extra-block">
+    <span class="title">Extra!</span>
+    <p>Prosciutto chuck frankfurter meatloaf, doner jerky ham hock spare ribs pig sirloin filet mignon. Pork belly sirloin bresaola, meatball capicola kielbasa picanha hamburger jerky ball tip pork chop. Meatloaf tail kielbasa leberkas cupim pork frankfurter swine short ribs shankle pork chop bresaola.</p>
+    <p>lTurkey tri-tip short loin, meatball frankfurter pig flank ham hock sausage capicola swine biltong. Beef ribs meatloaf short loin pancetta andouille flank filet mignon fatback. T-bone shank tongue sirloin rump, strip steak ham bresaola ribeye prosciutto hamburger.</p>
+</div>
   </section>
 </div>
 </body>
